build_err2.txt
[ 14%] Building CXX object CMakeFiles/ImageProcessor.dir/src/ImageFrame.cpp.obj
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:41:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   41 |     m_toolbar->AddTool(ID_RESET, "Reset", wxArtProvider::GetBitmap(wxART_UNDO, wxART_TOOLBAR), "Reset to Original Image");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:42:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   42 |     m_toolbar->AddTool(ID_FILTER_GRAYSCALE, "Grayscale", wxArtProvider::GetBitmap(wxART_NEW, wxART_TOOLBAR), "Apply Grayscale Filter");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:43:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   43 |     m_toolbar->AddTool(ID_FILTER_BLUR, "Blur", wxArtProvider::GetBitmap(wxART_REDO, wxART_TOOLBAR), "Apply Blur Filter");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:44:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   44 |     m_toolbar->AddTool(ID_FILTER_INVERT, "Invert", wxArtProvider::GetBitmap(wxART_WARNING, wxART_TOOLBAR), "Apply Invert Image Filter");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:45:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   45 |     m_toolbar->AddSeparator();
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:46:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   46 |     m_toolbar->AddTool(ID_FILTER_SOBEL, "Sobel", wxArtProvider::GetBitmap(wxART_ADD_BOOKMARK, wxART_TOOLBAR), "Apply Sobel Edge Detection");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:47:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   47 |     m_toolbar->AddTool(ID_FILTER_ROBERTS, "Roberts", wxArtProvider::GetBitmap(wxART_FILE_SAVE_AS, wxART_TOOLBAR), "Apply Roberts Edge Detection");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:48:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   48 |     m_toolbar->AddTool(ID_FILTER_PREWITT, "Prewitt", wxArtProvider::GetBitmap(wxART_GOTO_FIRST, wxART_TOOLBAR), "Apply Prewitt Edge Detection");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:49:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   49 |     m_toolbar->AddTool(ID_FILTER_CANNY, "Canny", wxArtProvider::GetBitmap(wxART_HARDDISK, wxART_TOOLBAR), "Apply Canny (OpenCV) Edge Detection");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:50:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   50 |     m_toolbar->AddSeparator();
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:51:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   51 |     m_toolbar->AddTool(ID_VIEW_HISTOGRAM, "Histogram", wxArtProvider::GetBitmap(wxART_GO_UP, wxART_TOOLBAR), "View Image Histogram");
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:53:5: error: 'm_toolbar' does not name a type; did you mean 'wxToolBar'?
   53 |     m_toolbar->Realize();
      |     ^~~~~~~~~
      |     wxToolBar
C:\Users\ahmed\Desktop\Computer-Vision-Task1\src\ImageFrame.cpp:54:1: error: expected declaration before '}' token
   54 | }
      | ^
mingw32-make[2]: *** [CMakeFiles\ImageProcessor.dir\build.make:124: CMakeFiles/ImageProcessor.dir/src/ImageFrame.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:86: CMakeFiles/ImageProcessor.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
